# RemoteJobNexus

./: .gitignore  .htaccess  .replit  .replit.run  .replit.workflow  README.txt  app.py  app_wsgi.py  basic_server.py  bootstrap.py  db.py  delayed_loader.py  deploy-via-github.bat  deploy.bat  direct_server.py  entrypoint.py  gunicorn_app.py  index.html  index.py  job_api.py  job_board.py  launcher.py  main.py  minimal.py  minimal_app.py  minimal_server.py  minimal_stable.py  minimalist.py  models.py  no_db_main.py  optimized_app.py  passenger_wsgi.py  pyproject.toml  python.cgi  quick_server.py  remote_work_server.sh  replit_main.py  requirements.txt  restart_server.sh  routes.py  (+38 more)
static/css/: style.css
static/js/: animations.js  categories.js  job-form.js  main.js  three-setup.js
templates/: base.html  blog.html  blog_post.html  index.html  job_detail.html  job_extractor.html  jobs.html  maintenance.html  post_job.html  text_extractor.html
templates/admin/: base.html  carousel.html  content.html  dashboard.html  forgot_password.html  jobs.html  login.html  scrape_job.html  users.html
