[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "authlib>=1.5.1",
    "pytest-flask>=1.3.0",
    "sqlalchemy>=2.0.39",
]
